--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for molecule_test
 - name: Debugging playbook
   ansible.builtin.debug:
-    msg: "Host is a {{ ansible_virtualization_type }} and is runnig kernel version {{ ansible_kernel }}"
+    msg: "Host is a {{ ansible_virtualization_type }} and is runnig kernel version {{ ansible_kernel }}."
 
 - name: Create user
   ansible.builtin.user:
